--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
 
     <title>Blog App - Redux</title>
   </head>
